fixed bug of not showing the game status and reset btn

--- a/src/styles/interface.css
+++ b/src/styles/interface.css
@@ -22,7 +22,7 @@ body {
 }
 
 .status {
-  color: rgb(11, 8, 8);
+  color: rgb(0, 0, 0);
   font-family: "Times New Roman", Times, serif;
   font-size: 3rem;
   padding: 10px;
@@ -31,7 +31,6 @@ body {
 #container {
   display: flex;
   justify-content: space-around;
-  align-items: center;
 }
 
 .boardPlayer {
@@ -45,8 +44,8 @@ body {
 }
 
 .cell {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 3rem;
+  height: 3rem;
   border: 1px solid #000;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
   margin: 0; /* Ensure no default margin */
@@ -61,8 +60,8 @@ body {
 
 .cellHasShip {
   background-color: rgb(4, 0, 255);
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 3rem;
+  height: 3rem;
   border: 1px solid #000;
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
   margin: 0; /* Ensure no default margin */
